--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ classifiers = [
   "License :: OSI Approved :: Apache Software License"
 ]
 
+[project.optional-dependencies]
+cli = ["julep-cli>=0.1.11; python_version >= '3.11'"]
+
 [project.urls]
 Homepage = "https://github.com/julep-ai/python-sdk"
 Repository = "https://github.com/julep-ai/python-sdk"
